ansible/roles/control/templates/addons/dexidp/service/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dexidp
  namespace: kube-system
spec:
  ingressClassName: cilium
  rules:
  - host: id.cluster.local
    http:
      paths:
      - path: /
        backend:
          service:
            name: dexidp
            port:
              number: 5556
        pathType: Prefix
